16/1/12
  Added more options to the rc file
  Fix for mode not displaying correctly at startup if now window is opened

14/1/12
  Added alpha value for unfocused windows to be semi transparent when cairo-compmgr is used
  Alpha value can be set in the rc file

9/1/12
  Master area is reset if second last window is removed

7/1/12
  Fixed wm crash if not using status bar and resize of stack top window only if 3 or more windows
  Fix for window sizes after the window at the top of the stack has been resized
  Added limits on the area of the master window 
  Fix for thunderbird write window( and others probably) just unmapping

4/1/12
  Statusbar text now has 5 colours

29/12/11
  Statusbar takes text from stdin (e.g. conky)

29/12/11
  Added the tiling mode shown in the status bar

28/12/11
  Fixed rereading the rc file killing the wm or messing with the keyboard shortcuts

8/12/11
  Fixes for fullscreen mode

7/12/11
  Fix for fonts not displaying properly

6/12/11/
  Desktop labels changeable from the rc file

5/12/11
  If a window is opened or closed on an unfocused desktop the desktop switcher will be updated

4/12/11
  Dessktops in the desktop switcher can be named from the config file

1/12/11
  Colours and font are now read from a rc file and can be update with a keyboard shortcut

30/11/11
  Added bar with desktop switcher and statusbar

28/11/11
  Replaced next/prev_desktop function with shorter rotate_desktop function
  (thanks to c00kiemon5ter)

28/11/11
  Added last desktop function for switching back to the last opened desktop
  (thanks to c00kimon5ter)

26/11/11
  Added option to click on a window to focus it
  (thanks to richo4)

21/11/11
  Fix for transient windows not being managed

15/11/11
  Fix for when trying to swap master with only one window

23/10/11
  Fine tuned the popup window management so notification windows aren't managed either

15/10/11
  Added having applications start on specified desktop

13/10/11